--- a/app/views/spree/users/_addresses.html.erb
+++ b/app/views/spree/users/_addresses.html.erb
@@ -1,28 +1,31 @@
 <h3><%= t(:shipping_addresses) %></h3>
-<table class="shipping-addresses" width="545">
-  <thead>
-    <tr>
-      <th><%= Spree::Address.model_name.human %></th>
-      <th colspan="2"></th>
-    </tr>
-  </thead>
-  <tbody>
-    <% if current_user.addresses.present? %>
-      <% current_user.addresses.each do |address| %>
-        <tr class="<%= cycle('even', 'odd') %>">
-          <td><%= address %></td>
-          <td><%= link_to t(:edit), edit_address_path(address) %></td>
-          <td><%= link_to t(:delete), address_path(address), :method => :delete, :confirm => t(:are_you_sure) %></td>
+<div class="field">
+  <table class="shipping-addresses" width="545">
+    <thead>
+      <tr>
+        <th><%= Spree::Address.model_name.human %></th>
+        <th colspan="2"></th>
+      </tr>
+    </thead>
+    <tbody>
+      <% if current_user.addresses.present? %>
+        <% current_user.addresses.each do |address| %>
+          <tr class="<%= cycle('even', 'odd') %>">
+            <td><%= address %></td>
+            <td><%= link_to t(:edit), edit_address_path(address) %></td>
+            <td><%= link_to t(:delete), address_path(address), :method => :delete, :confirm => t(:are_you_sure) %></td>
+          </tr>
+        <% end %>
+      <% else %>
+        <tr>
+          <td><%= t(:no_shipping_addresses_on_file) %></td>
+          <td colspan="2"></td>
         </tr>
       <% end %>
-    <% else %>
-      <tr>
-        <td><%= t(:no_shipping_addresses_on_file) %></td>
-        <td colspan="2"></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+    </tbody>
+  </table>
+  <br/>
+</div>
 <div id="new_address_link">
   <%= link_to t(:add_new_shipping_address), :controller => :addresses, :action => :new %>
 </div>
