removing inline style on table on my account page

--- a/app/views/spree/users/_addresses.html.erb
+++ b/app/views/spree/users/_addresses.html.erb
@@ -1,6 +1,6 @@
 <h3><%= t(:shipping_addresses) %></h3>
 <div class="field">
-  <table class="shipping-addresses" width="545">
+  <table class="shipping-addresses">
     <thead>
       <tr>
         <th><%= Spree::Address.model_name.human %></th>
